--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -71,6 +71,7 @@ services:
       - PHP_IDE_CONFIG=serverName=oleksii-bezpoiasnyi-dev.local
       # Go is required to catch emails with Mailhog and mhsendmail (Sendmail replacement)
       - ADDITIONAL_PATH=/usr/local/go/bin
+      - COMPOSER_VERSION=1
     volumes:
       - .:/var/www/html
       - ${SSL_CERTIFICATES_DIR}:/certs
