Dockerizer updated to version 3

--- a/.dockerizer/oleksii-bezpoiasnyi-dev.local-prod/apache/virtual-host.conf
+++ b/.dockerizer/oleksii-bezpoiasnyi-dev.local-prod/apache/virtual-host.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     ServerName oleksii-bezpoiasnyi-dev.local
-    ServerAlias www.oleksii-bezpoiasnyi-dev.local oleksii-bezpoiasnyi-second-dev.local www.oleksii-bezpoiasnyi-second-dev.local
+    ServerAlias oleksii-bezpoiasnyi-dev.local www.oleksii-bezpoiasnyi-dev.local oleksii-bezpoiasnyi-second-dev.local www.oleksii-bezpoiasnyi-second-dev.local
     DocumentRoot /var/www/html/pub/
     ServerAdmin admin@example.com
     UseCanonicalName Off
@@ -13,7 +13,7 @@
 
 <VirtualHost *:443>
     ServerName oleksii-bezpoiasnyi-dev.local
-    ServerAlias www.oleksii-bezpoiasnyi-dev.local oleksii-bezpoiasnyi-second-dev.local www.oleksii-bezpoiasnyi-second-dev.local
+    ServerAlias oleksii-bezpoiasnyi-dev.local www.oleksii-bezpoiasnyi-dev.local oleksii-bezpoiasnyi-second-dev.local www.oleksii-bezpoiasnyi-second-dev.local
     DocumentRoot /var/www/html/pub/
     ServerAdmin admin@example.com
     UseCanonicalName Off
@@ -24,8 +24,8 @@
     </Directory>
     <IfModule ssl_module>
         SSLEngine on
-        SSLCertificateFile /certs/oleksii-bezpoiasnyi.local-dev+7.pem
-        SSLCertificateKeyFile /certs/oleksii-bezpoiasnyi.local-dev+7-key.pem
+        SSLCertificateFile /certs/oleksii-bezpoiasnyi-dev.local-prod.pem
+        SSLCertificateKeyFile /certs/oleksii-bezpoiasnyi-dev.local-prod-key.pem
         SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
     </IfModule>
 </VirtualHost>
